# mashiro-task

./: CHANGELOG.md  Cargo.toml  README.md
src/: add.rs  commands.rs  completion.rs  datetime.rs  do.rs  interval.rs  list.rs  main.rs  now.rs  paths.rs  recurrence.rs  regenerate_ids.rs  remove.rs  task.rs  tasks.rs
src/commands/: done.rs  now.rs  other.rs  schedule.rs
