[package]
name = "mashiro-task"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.2", features = ["derive", "string"] }
clap_complete = "4.5.1"
csv = "1.3.0"
dirs = "5.0.1"
prettytable-rs = "0.10.0"
rand = "0.8.5"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
